# mangodb

./: CMakeLists.txt  CMakelists.txt
include/mangodb/: btree.h  database.h  db_configurations.h  header.h  io_mgr.h  mangodb.h  page.h  utility.h
src/: CMakeLists.txt  database.cpp  io_mgr.cpp  main.cpp
tests/: CMakeLists.txt  CMakelists.txt  test_database.cpp
